Upload desafio Aula01.

--- a/desafios/aula01/Aula01_Challenge.ipynb
+++ b/desafios/aula01/Aula01_Challenge.ipynb
@@ -16,7 +16,7 @@
                 "\n",
                 "| Hidrômetro | Horímetro |\n",
                 "|----------------|-----------------|\n",
-                "|![Hidrometro](../img/desafios/aula01/hidrometro.jpg) | ![Horimetro](../img/desafios/aula01/horimetro-digital.jpg) |\n",
+                "|![Hidrometro](../../img/desafios/aula01/hidrometro.jpg) | ![Horimetro](../../img/desafios/aula01/horimetro-digital.jpg) |\n",
                 "\n",
                 "A modelagem da tabela que armazena estes dados, leva em consideração, basicamente:\n",
                 "  - o ponto de monitoramento;\n",
@@ -26,7 +26,7 @@
                 "\n",
                 "Ex.:\n",
                 "\n",
-                "![well_operation](../img/desafios/aula01/well_operation_01.png)\n",
+                "![well_operation](../../img/desafios/aula01/well_operation_01.png)\n",
                 "\n",
                 "> Neste caso, a vazão pode ser calculada pela expressão: $$Vazão (m³/h) = {([Hidrometro Final] - [Hidrometro Inicial]) \\over ([Horimetro Final] - [Horimetro Inicial])}$$\n",
                 "\n",
@@ -43,7 +43,7 @@
                 "\n",
                 "Um exemplo mais realista da situação prática deste monitoramento é a seguinte:\n",
                 "\n",
-                "![well_operation_real](../img/desafios/aula01/well_operation_02.png)\n",
+                "![well_operation_real](../../img/desafios/aula01/well_operation_02.png)\n",
                 "\n",
                 "## Objetivo\n",
                 "O desafio é escrever uma consulta SQL para calcular a vazão média de cada poço por dia, levando em consideração as diferentes formas de importação de dados na tabela.\n",
