--- a/desafios/aula01/Aula01_Challenge.ipynb
+++ b/desafios/aula01/Aula01_Challenge.ipynb
@@ -1,11 +1,20 @@
 {
+    "metadata": {
+        "kernelspec": {
+            "name": "SQL",
+            "display_name": "SQL",
+            "language": "sql"
+        },
+        "language_info": {
+            "name": "sql",
+            "version": ""
+        }
+    },
+    "nbformat_minor": 2,
+    "nbformat": 4,
     "cells": [
         {
-            "attachments": {},
             "cell_type": "markdown",
-            "metadata": {
-                "azdata_cell_guid": "e6388ac0-5336-4ff3-978c-64c499795d60"
-            },
             "source": [
                 "# 🔥Desafio: Cálculo da **vazão operacional de poços**\n",
                 "\n",
@@ -55,23 +64,26 @@
                 "   1. Para o numerador, caso o volume (`zoperation_volum`) esteja preenchido, considere este valor. Caso contrário, calcule o volume pela diferença de leituras do hidrômetro.\n",
                 "   2. Para o denominador, caso as horas de operação (`zoperation_hours`) esteja preenchida, considere este valor. Caso contrário, calcule as horas pela diferença de leituras do horímetro.\n",
                 "3. Caso nenhum destes campos esteja preenchido, retorne `NULL`."
-            ]
+            ],
+            "metadata": {
+                "azdata_cell_guid": "e6388ac0-5336-4ff3-978c-64c499795d60"
+            },
+            "attachments": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "source": [
+                "-- Dica: Função COALESCE. Boa sorte!\n"
+            ],
             "metadata": {
                 "azdata_cell_guid": "a35abe0e-b0b3-4d4f-9760-56e22180da86",
                 "language": "sql"
             },
             "outputs": [],
-            "source": [
-                "-- Dica: Função COALESCE. Boa sorte!\n"
-            ]
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
             "source": [
                 "# 🤯 Desafio desafiador\n",
                 "\n",
@@ -83,29 +95,22 @@
                 "Escrever uma consulta SQL para calcular a vazão média de cada poço por dia, considerando apenas os campos `hydrometer_final` e `hourmeter_final` (os campos `hydrometer_start` e `hourmeter_start` devem ser desprezados).\n",
                 "\n",
                 "Obs.: A consulta deve, para cada registro do hidrômetro/horímetro, identificar as leituras anteriores do mesmo ponto e calcular a diferença de volume e horas para a leitura atual."
-            ]
+            ],
+            "metadata": {
+                "azdata_cell_guid": "93d16899-ed4f-4cd2-90b2-0232634fdb41"
+            }
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
             "source": [
                 "-- Dessa vez sem dicas. Boa sorte!\n"
-            ]
+            ],
+            "metadata": {
+                "azdata_cell_guid": "6a96b56c-3b56-4668-91c0-57b04fc13d6f",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
         }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "SQL",
-            "language": "sql",
-            "name": "SQL"
-        },
-        "language_info": {
-            "name": "sql",
-            "version": ""
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 2
+    ]
 }
