Solução Desafio 04 + Ajustes

--- a/desafios/aula02/Aula02_Challenge.ipynb
+++ b/desafios/aula02/Aula02_Challenge.ipynb
@@ -1,20 +1,11 @@
 {
-    "metadata": {
-        "kernelspec": {
-            "name": "SQL",
-            "display_name": "SQL",
-            "language": "sql"
-        },
-        "language_info": {
-            "name": "sql",
-            "version": ""
-        }
-    },
-    "nbformat_minor": 2,
-    "nbformat": 4,
     "cells": [
         {
+            "attachments": {},
             "cell_type": "markdown",
+            "metadata": {
+                "azdata_cell_guid": "e6388ac0-5336-4ff3-978c-64c499795d60"
+            },
             "source": [
                 "# 🔥 Desafio - **Cálculo da Cota do Nível d'Água**\n",
                 "\n",
@@ -56,60 +47,60 @@
                 "> Cota NA (m) = ([CotaTopo (m)] ou [CotaTerreno (m)]) - [Profundidade (m)]\n",
                 "\n",
                 "****"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "e6388ac0-5336-4ff3-978c-64c499795d60"
-            },
-            "attachments": {}
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                "-- Primeiro passo: Obter cotas do topo mais recentes - tabela toc\n",
-                "-- 🔓 Dica secreta: A data final das cotas vigentes foi cadastrada como '31/12/2030'\n",
-                "-- Em alguns casos, o campo da data final é mantido em branco..\n"
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "7b0cf6ca-dd5d-4f82-86fa-35745c90e253",
                 "language": "sql",
                 "tags": []
             },
             "outputs": [],
-            "execution_count": null
+            "source": [
+                "-- Primeiro passo: Obter cotas do topo mais recentes - tabela toc\n",
+                "-- 🔓 Dica secreta: A data final das cotas vigentes foi cadastrada como '31/12/2030'\n",
+                "-- Em alguns casos, o campo da data final é mantido em branco..\n"
+            ]
         },
         {
             "cell_type": "code",
+            "execution_count": null,
+            "metadata": {
+                "azdata_cell_guid": "06dae411-829d-46be-8a50-0c15b5791847",
+                "language": "sql"
+            },
+            "outputs": [],
             "source": [
                 "-- Segundo passo: Adicionar lógica para considerar o campo 'Elevation'\n",
                 "-- para todos os poços tubulares sem registros na tabela toc\n",
                 "\n",
                 "-- Dica 1: LEFT JOIN para manter poços sem alterações\n",
                 "-- Dica 2: COALESCE para considerar cota do terreno\n"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "06dae411-829d-46be-8a50-0c15b5791847",
-                "language": "sql"
-            },
-            "outputs": [],
-            "execution_count": null
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                "-- Terceiro passo: Usar consultas anteriores como base para\n",
-                "-- o cálculo final, na tabela de dados - gw_level!\n",
-                "\n",
-                "-- Chega de dicas..\n"
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "358b7c34-7705-437d-b4f2-402ef22aa447",
                 "language": "sql"
             },
             "outputs": [],
-            "execution_count": null
+            "source": [
+                "-- Terceiro passo: Usar consultas anteriores como base para\n",
+                "-- o cálculo final, na tabela de dados - gw_level!\n",
+                "\n",
+                "-- Chega de dicas..\n"
+            ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
+            "metadata": {
+                "azdata_cell_guid": "bb272db3-46a1-471a-b92c-da3c8ea065e2"
+            },
             "source": [
                 "# 🤯 Desafio desafiador\n",
                 "\n",
@@ -119,23 +110,32 @@
                 "Adapte a consulta do desafio anterior, para considerar as alterações de cota do topo no cálculo da cota do nível de água.\n",
                 "\n",
                 "Ao final, retorne a **média anual** da cota do nível d'água para cada ponto."
-            ],
-            "metadata": {
-                "azdata_cell_guid": "bb272db3-46a1-471a-b92c-da3c8ea065e2"
-            },
-            "attachments": {}
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                "-- Boa sorte!\n"
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "10765e73-6398-4b95-aeb3-28d76bab648f",
                 "language": "sql"
             },
             "outputs": [],
-            "execution_count": null
+            "source": [
+                "-- Boa sorte!\n"
+            ]
         }
-    ]
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "SQL",
+            "language": "sql",
+            "name": "SQL"
+        },
+        "language_info": {
+            "name": "sql",
+            "version": ""
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 2
 }
