--- a/notebooks/Aula04_MelhoresPraticas.ipynb
+++ b/notebooks/Aula04_MelhoresPraticas.ipynb
@@ -2,7 +2,9 @@
     "cells": [
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "37be56e9-2e54-41c1-a3f9-5484ada6b869"
+            },
             "source": [
                 "# Melhores Práticas de SQL e Performance de consultas 🚀\n",
                 "\n",
@@ -11,7 +13,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "befbcbd9-8d32-47f1-ada9-528741b0e997"
+            },
             "source": [
                 "## Revisão Aula 03\n",
                 "\n",
@@ -66,7 +70,8 @@
             "cell_type": "code",
             "execution_count": 9,
             "metadata": {
-                "azdata_cell_guid": "6f8719c9-a233-42fd-81da-dd40fa4c0c85"
+                "azdata_cell_guid": "6f8719c9-a233-42fd-81da-dd40fa4c0c85",
+                "language": "sql"
             },
             "outputs": [],
             "source": [
@@ -104,7 +109,8 @@
             "cell_type": "code",
             "execution_count": 10,
             "metadata": {
-                "azdata_cell_guid": "2e77bb75-df22-4138-aeca-96777119a3e2"
+                "azdata_cell_guid": "2e77bb75-df22-4138-aeca-96777119a3e2",
+                "language": "sql"
             },
             "outputs": [],
             "source": [
@@ -140,14 +146,18 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "ec1ce44b-8c83-42ce-b246-5dbaba3d0ef3"
+            },
             "source": [
                 "# Monitorar e ajustar desempenho 🚀"
             ]
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "2b3125f7-f7c2-4352-b629-bd706656a152"
+            },
             "source": [
                 "## Como as consultas são executadas ?\n",
                 "\n",
@@ -160,7 +170,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "c78eb368-f6e6-4c59-a102-e927b5535135"
+            },
             "source": [
                 "### Analisando o plano de execução (*Query Execution Plan*) de uma consulta\n",
                 "\n",
@@ -170,7 +182,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "66e81566-a86b-4760-a720-df6ddd296653",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- Exemplo query Aula 01: Criando novas colunas\n",
@@ -191,7 +206,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "909a6e80-3056-4ae8-a729-969bd31f5c72"
+            },
             "source": [
                 "### Exercício 1: \n",
                 "Vamos analisar os desempenhos das consultas propostas como soluções para o Desafio da Aula 01 (Cálculo da vazão operacional de poços)...\n",
@@ -201,7 +218,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "cdc3caf1-da82-437c-916e-ec94b816989b"
+            },
             "source": [
                 "1. Desconsiderando os campos **Hidrometro Inicial** e **Horimetro Inicial**:"
             ]
@@ -209,7 +228,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "603cca92-23f9-4446-a222-7057f334fdd9",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- Solução 01: Subqueries\n",
@@ -275,7 +297,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "d6308f61-1704-4420-b748-53a17e868fc7",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- Solução 02: CTE + ROW_NUMBER()\n",
@@ -319,12 +344,15 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "c781c95d-a335-4ba2-8123-5533dfa15b49",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- Solução 03: LAG\n",
                 "\n",
-                "SELECT TOP 10\n",
+                "SELECT\n",
                 "\two.Station\n",
                 "\t,wo.zdate_                      AS [Data]\n",
                 "\t,wo.previous_date\t\t\t\tAS [Ultima Data]\n",
@@ -365,7 +393,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "798902b8-6474-4f49-8dac-057712bb5ebe"
+            },
             "source": [
                 "2. Considerando os campos **Hidrometro Inicial** e **Horimetro Inicial**:"
             ]
@@ -373,7 +403,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "6f34172f-0047-49f8-b3c4-990cd71cae14",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- Solução inicial\n",
@@ -411,7 +444,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "f028ba47-5851-4f69-bbaf-c4e4e2f662a8"
+            },
             "source": [
                 "#### Primeiras conclusões:\n",
                 "\n",
@@ -423,7 +458,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "359b88b1-4645-4956-928e-7afdedf7ad75"
+            },
             "source": [
                 "## Exercício 2:\n",
                 "\n",
@@ -433,7 +470,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "3b68959c-8057-469e-9579-165168aa50f0",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- "
@@ -441,7 +481,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "d111a722-d115-45e1-a597-8145f7e2232e"
+            },
             "source": [
                 "> Na maioria das vezes, o *Query Optimizer* faz um ótimo trabalho na escolha de planos de execução altamente eficientes, inclusive recomendando a criação de índices específicos que podem melhorar a performance de uma consulta.\n",
                 "\n",
@@ -450,7 +492,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "5c1ab1d0-eebd-4bdf-9f50-b21f01eeb837"
+            },
             "source": [
                 "## Boas práticas\n",
                 "\n",
@@ -461,7 +505,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "272de0c0-5c0d-4717-885a-a5849ac8ae67"
+            },
             "source": [
                 "### 1. Precisão, legibilidade e otimização: nessa ordem\n",
                 "\n",
@@ -472,7 +518,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "28f15b3f-5473-4664-9a58-0ce302c88e38"
+            },
             "source": [
                 "#### 1.1 Comente o código (por favor 🙏), principalmente as regras de negócio envolvidas.\n",
                 "- Ajude ao próximo (e a ti mesmo)"
@@ -481,7 +529,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "05306bf7-c567-429a-bf8c-c84571da2dce",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- Exemplo:\n",
@@ -498,13 +549,17 @@
                 "    ,dry_indicator                      AS [Seco?]\n",
                 "    ,zstatus                            AS [Status]\n",
                 "FROM gw_level\n",
+                "-- Filtra 2023\n",
                 "WHERE [date_] >= '2023-01-01' AND zfrequency = 'Mensal'"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "ef8c51c4-be0e-46db-9387-3867dabbe040",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "/* \n",
@@ -528,7 +583,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "2a13f5b8-a106-49ac-8159-4e1186b530d6"
+            },
             "source": [
                 "#### 1.2 Formate a consulta e utilize aliases\n",
                 "\n",
@@ -543,7 +600,10 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "96d46d62-7032-491e-912e-abb18604c1cb",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "SELECT Station\n",
@@ -561,7 +621,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "d83570ea-e19d-49c9-8b73-8d3d911bbba1"
+            },
             "source": [
                 "### 2. Evite usar `SELECT *`\n",
                 "\n",
@@ -573,7 +635,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "a3e2b117-e5a0-4b1f-a3b6-6040f61e49c5"
+            },
             "source": [
                 "### 3. Lembre-se da ordem de execução das consultas\n",
                 "\n",
@@ -584,15 +648,20 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "2658f219-64f7-44ad-bf1a-fcff35379239"
+            },
             "source": [
-                "### 3. Evite usar funções na cláusula WHERE"
+                "### 4. Evite usar funções na cláusula WHERE"
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "a19188bf-e78d-4933-a7e0-ab600dc48a1d",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- ❌ Ao invés de\n",
@@ -608,9 +677,11 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "71526337-2ace-4761-83ea-c67b3774f4f0"
+            },
             "source": [
-                "#### 3.1. Evite usar o operador `LIKE` na cláusula WHERE\n",
+                "#### 4.1. Evite usar o operador `LIKE` na cláusula WHERE\n",
                 "\n",
                 "- O operador `LIKE` compara caracteres e permite o uso de caracteres curinga como `%`, mas pode apresentar lentidão.\n",
                 "- Quando necessário, evite utilizar caracteres como o `%` **no início** das strings."
@@ -619,21 +690,29 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "06729ea9-e020-4b3d-9e2f-5a6e35795417",
+                "language": "sql"
+            },
             "outputs": [],
             "source": [
                 "-- ❌ Ao invés de\n",
                 "SELECT * FROM station WHERE mine LIKE '%Barragem%'\n",
                 "\n",
                 "-- ✅ É melhor utilizar\n",
-                "SELECT * FROM station WHERE mine LIKE 'Barragem%'"
+                "SELECT * FROM station WHERE mine LIKE 'Barragem%'\n",
+                "\n",
+                "SELECT * FROM station WHERE mine = 'Barragem A' OR mine = 'Barragem B'\n",
+                "SELECT * FROM station WHERE mine IN ('Barragem A', 'Barragem B')"
             ]
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "5706cfb6-9dad-407d-abd3-95288764182b"
+            },
             "source": [
-                "### 4. Evite usar a instrução `ORDER BY`, especialmente em sub-queries\n",
+                "### 5. Evite usar a instrução `ORDER BY`, especialmente em sub-queries\n",
                 "\n",
                 "- Ordenar registros é uma operação extremamente custosa.\n",
                 "- A menos que estritamente necessário, opte por ordenar os resultados na ferramenta de análise, não na consulta SQL"
@@ -641,9 +720,11 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "3c28eb50-e95f-42e4-b869-e2de1600f51b"
+            },
             "source": [
-                "### 5. Faça escolhas de JOINs inteligentes\n",
+                "### 6. Faça escolhas de JOINs inteligentes\n",
                 "\n",
                 "- Utilize JOINs apenas quando necessário.\n",
                 "- Prefira a estrutura `<tabela_maior> JOIN <tabela_menor>` ao invés de `<tabela_menor> JOIN <tabela_maior>`.\n",
@@ -653,7 +734,9 @@
         },
         {
             "cell_type": "markdown",
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "1b536ccf-5e11-44ee-8e88-3288d3fe3244"
+            },
             "source": [
                 "📚 Recomendações finais:\n",
                 "\n",
